--- a/Spotter_group/Profile.xaml
+++ b/Spotter_group/Profile.xaml
@@ -14,15 +14,16 @@
     
     
     
-    <Grid x:Name="gridProfile" Margin="10,15,10,0">
+    <Grid x:Name="gridProfile" Margin="150,50">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -30,56 +31,40 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-
         </Grid.RowDefinitions>
         <TextBox Name="testbox"></TextBox>
         
-        <Label Grid.Row="0" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#009999" Grid.ColumnSpan="4">Profile</Label>
-        
-        <TextBlock Grid.Column="0" Grid.Row="1" Foreground ="#FFE0E0E0">Name:</TextBlock>
-        <Label x:Name="lblName" Grid.Column="1" Grid.Row="1" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblName_MouseDoubleClick"
-               Content="{Binding ElementName=tbName, Path=Text}"/>
-        <TextBox  x:Name="tbName" Grid.Column="2" Grid.Row="1"></TextBox>
-        
-        
-        <TextBlock Grid.Column="0" Grid.Row="2" Foreground="#FFE0E0E0">Birthdate:</TextBlock>
-        <Label x:Name="lblDOB" Grid.Column="1" Grid.Row="2" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblDOB_MouseDoubleClick">stuff to click</Label>
-        <TextBox Visibility="Hidden" x:Name="tbDOB" Grid.Column="2" Grid.Row="2 "></TextBox>
+        <Label Grid.Row="0" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#009999" Grid.ColumnSpan="4">Profile</Label>
+
+        <TextBlock  FontSize="20" Grid.Column="0" Grid.Row="1" Foreground ="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Name:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblName" Grid.Column="1" Grid.Row="1" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Foreground ="#FFE0E0E0">Username:</TextBlock>
-        <Label x:Name="lblUsername" Grid.Column="1" Grid.Row="3" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblUsername_MouseDoubleClick">stuff to click</Label>
-        <TextBox Visibility="Hidden" x:Name="tbUsername" Grid.Column="2" Grid.Row="3"></TextBox>
+        <TextBlock  FontSize="20" Grid.Column="0" Grid.Row="2" Foreground="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Birthdate:</TextBlock>
+        <Label  Margin="10" FontSize="20" x:Name="lblDOB" Grid.Column="1" Grid.Row="2" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Foreground="#FFE0E0E0">Weight:</TextBlock>
-        <Label x:Name="lblWeight" Grid.Column="1" Grid.Row="4" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblWeight_MouseDoubleClick">stuff to click</Label>
-        <TextBox Visibility="Hidden" x:Name="tbWeight" Grid.Column="2" Grid.Row="4"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Foreground ="#FFE0E0E0">Start Date:</TextBlock>
-        <Label x:Name="lblStartDate" Grid.Column="1" Grid.Row="5" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblStartDate_MouseDoubleClick">stuff to click</Label>
-        <TextBox Visibility="Hidden" x:Name="tbStartDate" Grid.Column="2" Grid.Row="5"></TextBox>
+        <TextBlock  FontSize="20" Grid.Column="2" Grid.Row="1" Foreground ="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Username:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblUsername" Grid.Column="3" Grid.Row="1" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
 
-        <TextBlock Grid.Column="0" Grid.Row="6" Foreground="#FFE0E0E0">Password:</TextBlock>
-        <Label x:Name="lblPassword" Grid.Column="1" Grid.Row="6" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblPassword_MouseDoubleClick">stuff to click</Label>
-        <TextBox Visibility="Hidden" x:Name="tbPassword" Grid.Column="2" Grid.Row="6"></TextBox>
+        <TextBlock  FontSize="20" Grid.Column="0" Grid.Row="3" Foreground="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Weight:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblWeight" Grid.Column="1" Grid.Row="3" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
 
-        <TextBlock Grid.Column="0" Grid.Row="7" Foreground="#FFE0E0E0">Workout:</TextBlock>
-        <Label x:Name="lblWorkout" Grid.Column="1" Grid.Row="7" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblWorkout_MouseDoubleClick">stuff to click</Label>
-        <ComboBox x:Name="cbWorkouts" Grid.Column="2" Grid.Row="7" Visibility="Hidden">
-            <ComboBoxItem IsSelected="True">Workouts</ComboBoxItem>
-            <ComboBoxItem>Tone up</ComboBoxItem>
-            <ComboBoxItem>Gain Muscle</ComboBoxItem>
-            <ComboBoxItem>Lose Weight</ComboBoxItem>
-            <ComboBoxItem>Cardio</ComboBoxItem>
-        </ComboBox>
-        <TextBlock Grid.Column="0" Grid.Row="8" Foreground="#FFE0E0E0">Workout goals</TextBlock>
-        <Label Grid.Column="1" Grid.Row="8" Foreground="#ffe0e0e0" MouseDoubleClick="Label_MouseDoubleClick">Please let us a bit about your workout goals!</Label>
-        <TextBox Visibility="Hidden" x:Name="tbGoals" Grid.Column="2" Grid.Row="8"></TextBox>
+        <TextBlock  FontSize="20" Grid.Column="0" Grid.Row="4" Foreground="#FFE0E0E0" VerticalAlignment="Center" HorizontalAlignment="Right">Height:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblHeight" Grid.Column="1" Grid.Row="4" Foreground="#009999" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
 
-        <Button Grid.Column="3" Grid.Row="10" Click="Button_Click">Save</Button>
+        <TextBlock  FontSize="20" Grid.Column="2" Grid.Row="3" Foreground ="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Start Date:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblStartDate" Grid.Column="3" Grid.Row="3" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
+
+        <TextBlock  FontSize="20" Grid.Column="2" Grid.Row="2" Foreground="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Password:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblPassword" Grid.Column="3" Grid.Row="2" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
+
+        <TextBlock  FontSize="20" Grid.Column="2" Grid.Row="4" Foreground="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Workout:</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblWorkout" Grid.Column="3" Grid.Row="4" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
+
+        <TextBlock  FontSize="20" Grid.Column="2" Grid.Row="5" Foreground="#FFE0E0E0" HorizontalAlignment="Right" VerticalAlignment="Center">Gender</TextBlock>
+        <Label Margin="10" FontSize="20" x:Name="lblGender" Grid.Column="3" Grid.Row="5" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
+
+        <Button Grid.Column="3" Grid.Row="10" Click="Button_Click">Populate</Button>
     </Grid>
 </UserControl>
