--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -20,10 +20,12 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
@@ -59,14 +61,18 @@
         
         <!-- Column 3 -->
         <StackPanel Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" Margin="10" Background="#666666">
-            <Image Source="/images/Icons/ARMS.png"></Image>
-            <TextBlock Name="txtblk1" Margin="10" Grid.Row="2" Grid.Column="3" Foreground="White">Menu</TextBlock>
+            <Image Height="25" Width="125" Source="{Binding Source={StaticResource workouts}, XPath=image}" ></Image>
+            <Image Height="25" Width="125" Source=""></Image>
         </StackPanel>
 
         <!-- Column 4 -->
         <StackPanel Grid.Column="4" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
-            <ListBox Foreground="Black"  ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
+            <ListBox Foreground="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
                       DisplayMemberPath="name" ></ListBox>
+        </StackPanel>
+        <StackPanel Grid.Column="5" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
+            <ListBox Foreground="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
+                      DisplayMemberPath="details" ></ListBox>
         </StackPanel>
         
     </Grid>
