--- a/Spotter_group/Profile.xaml
+++ b/Spotter_group/Profile.xaml
@@ -32,8 +32,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <TextBox Name="testbox"></TextBox>
         
@@ -69,21 +68,19 @@
         <Label Margin="10" FontSize="20" x:Name="lblGender" Grid.Column="3" Grid.Row="5" Foreground="#009999" HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
 
         <Label Grid.Column="0" Grid.Row="6" FontSize="30" Foreground="#009999" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="4">Progress</Label>
-        <ListBox Name="ListWorkout" HorizontalContentAlignment="Stretch" Grid.Row="7" Grid.ColumnSpan="2" Grid.Column="1">
+        <ListBox Name="ListWorkout" HorizontalContentAlignment="Stretch" Grid.Row="7" Grid.ColumnSpan="4">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-
-                        <ProgressBar Height="100px" Foreground="#009999"
+                            <ProgressBar Foreground="#009999" Height="140" Grid.Column="1" Grid.ColumnSpan="2" 
                                  Maximum="100"
                                  Minimum="1"
                                  Value="{Binding Progress}"/>
+                            <Image Grid.Column="3" Height="120" Width="100" Source="{Binding afterImage}"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Image Source="" Grid.Column="0" Grid.Row="7"/>
-        <Image Source="" Grid.Column="3" Grid.Row="7"/>
 
         <Button Grid.Column="3" Grid.Row="0" Click="Button_Click">Populate</Button>
 
