--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -61,8 +61,8 @@
         
         <!-- Column 3 -->
         <StackPanel Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" Margin="10" Background="#666666">
-            <Image Height="25" Width="125" Source="{Binding Source={StaticResource workouts}, XPath=image}" ></Image>
-            <Image Height="25" Width="125" Source=""></Image>
+            <Image Height="100" Width="100" Source="images/Icons/WHOLE_BODY.png" ></Image>
+            
         </StackPanel>
 
         <!-- Column 4 -->
