--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -20,14 +20,13 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height=".5*"/>
+            <RowDefinition Height="1.25*"/>
+            <RowDefinition Height="*"/>
+
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2" Foreground="#666666" FontSize="25">Workout Scheduler</Label>
         <StackPanel Grid.Row="1" Grid.ColumnSpan="3"  HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
@@ -67,11 +66,11 @@
 
         <!-- Column 4 -->
         <StackPanel Grid.Column="4" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
-            <ListBox Foreground="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
+            <ListBox Foreground="White" Background="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
                       DisplayMemberPath="name" ></ListBox>
         </StackPanel>
         <StackPanel Grid.Column="5" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
-            <ListBox Foreground="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
+            <ListBox Foreground="White" Background="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
                       DisplayMemberPath="details" ></ListBox>
         </StackPanel>
         
