calendar and added myself to database

--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -67,7 +67,7 @@
         <!-- Column 4 -->
         <StackPanel Grid.Column="4" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
             <ListBox Foreground="White" Background="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
-                      DisplayMemberPath="name" ></ListBox>
+                      DisplayMemberPath="name" ></ListBox>             <!--               ="{Binding Source={StaticResource workouts}, XPath=day2}" -->
         </StackPanel>
         <StackPanel Grid.Column="5" Grid.Row="1" HorizontalAlignment="Left" Margin="10">
             <ListBox Foreground="White" Background="Black" Focusable="False" ItemsSource="{Binding Source={StaticResource workouts}, XPath=day2}"
