--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -32,8 +32,7 @@
                 <MenuItem Header="Workout" x:Name="MenuItemWorkout" Foreground="Black" Click="MenuItemWorkout_Click"/>
                 <MenuItem Header="Nutrition" x:Name="MenuItemNutrition" Foreground="Black" Click="MenuItemNutrition_Click"/>
             </MenuItem>
-            <MenuItem Header="Logout" Foreground="White"/>
-            <MenuItem x:Name="menuProgress" Header="Progress" Foreground="White" Click="menuProgress_Click"/>
+            <MenuItem x:Name="menuLogOut" Header="Logout" Foreground="White" Click="menuLogOut_Click" />
         </Menu>
         <UserControl Margin="70,50,70,50"
                      Background="#009999">
