--- a/Spotter_group/SignIn.xaml
+++ b/Spotter_group/SignIn.xaml
@@ -41,11 +41,11 @@
             
         </TextBox>
 
-        <TextBox Grid.Column="1" Grid.Row="3" Name="pass_word" Height="20"
+        <PasswordBox Grid.Column="1" Grid.Row="3" Name="pass_word" Height="20"
                  Width="130"
                   VerticalAlignment="Center" HorizontalAlignment="Center">
             
-        </TextBox>
+        </PasswordBox>
 
         <Button Grid.Column="1" Grid.Row="4" Height="20" Width="80"
                 Click="Button_Click">Submit</Button>
