--- a/Spotter_group/SignIn.xaml
+++ b/Spotter_group/SignIn.xaml
@@ -9,15 +9,15 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -26,33 +26,34 @@
                FontSize="70" HorizontalAlignment="Center"
                VerticalAlignment="Center" BorderThickness="2" BorderBrush="#666666" >Sign In</Label>
 
-        <Label Grid.Row="2" Grid.Column="1" Foreground="White"
+        <Image Grid.ColumnSpan="2" Panel.ZIndex="1" Height="600" Width="800" Source="images\Graphics\signin.png" Grid.Column="1" Grid.Row="1"/>
+        <StackPanel Grid.Column="2" Grid.Row="1" Panel.ZIndex="2" Orientation="Vertical" VerticalAlignment="Center" >
+            
+            <Label Grid.Row="2" Grid.Column="1" Foreground="#009999"
                HorizontalAlignment="Center"
-               VerticalAlignment="Top">Username:
-        </Label>
+               VerticalAlignment="Top" FontSize="20">Username:
+            </Label>
 
-        <Label Grid.Row="3" Grid.Column="1" 
-               Foreground="White"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Top">Password:
-        </Label>
 
-        
-
-        <TextBox Grid.Column="1" Grid.Row="2" Name="user_name"
+            <TextBox Grid.Column="1" Grid.Row="2" Name="user_name"
                  Height="20" Width="130" VerticalAlignment="Center"
                  HorizontalAlignment="Center">
-            
-        </TextBox>
+            </TextBox>
+
+            <Label Grid.Row="3" Grid.Column="1" 
+               Foreground="#009999"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Top" FontSize="20">Password:
+            </Label>
 
         <PasswordBox Grid.Column="1" Grid.Row="3" Name="pass_word" Height="20"
                  Width="130"
                   VerticalAlignment="Center" HorizontalAlignment="Center">
-            
         </PasswordBox>
-
-        <Button Grid.Column="1" Grid.Row="4" Height="20" Width="80"
-                Click="Button_Click">Submit</Button>
+        </StackPanel>
+        
+        <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Height="20" Width="80"
+                Click="Button_Click" HorizontalAlignment="Center">Submit</Button>
 
       
 
