--- a/Spotter_group/SignIn.xaml
+++ b/Spotter_group/SignIn.xaml
@@ -19,14 +19,13 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="1" Grid.Row="0" Foreground="White"
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Foreground="White"
                FontSize="70" HorizontalAlignment="Center"
                VerticalAlignment="Center" BorderThickness="2" BorderBrush="#666666" >Sign In</Label>
 
-        <Image Grid.ColumnSpan="2" Panel.ZIndex="1" Height="600" Width="800" Source="images\Graphics\signin.png" Grid.Column="1" Grid.Row="1"/>
+        <Image Grid.ColumnSpan="4" Panel.ZIndex="1" Height="900" Width="1100" Source="images\Graphics\signin.png" Grid.Column="0" Grid.Row="1"/>
         <StackPanel Grid.Column="2" Grid.Row="1" Panel.ZIndex="2" Orientation="Vertical" VerticalAlignment="Center" >
             
             <Label Grid.Row="2" Grid.Column="1" Foreground="#009999"
@@ -51,8 +50,8 @@
                   VerticalAlignment="Center" HorizontalAlignment="Center">
         </PasswordBox>
         </StackPanel>
-        
-        <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Height="20" Width="80"
+
+        <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Height="60" Width="125"
                 Click="Button_Click" HorizontalAlignment="Center">Submit</Button>
 
       
