--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -19,20 +19,20 @@
                 <LinearGradientBrush>
                 </LinearGradientBrush>
             </Menu.Background>
-            <MenuItem Header="Spotter" x:Name="MenuItemSpotter" Foreground="White" Click="MenuItemSpotter_Click" Visibility="Hidden"></MenuItem>
-            <MenuItem Header="User" Foreground="White" Click="MenuItem_Click" Visibility="Hidden">
+            <MenuItem Header="Spotter" x:Name="MenuItemSpotter" Foreground="White" Click="MenuItemSpotter_Click" Visibility="Visible"></MenuItem>
+            <MenuItem Header="User" Foreground="White" Click="MenuItem_Click" Visibility="Visible">
                 <MenuItem x:Name="MenuItemSignIn" Header="Sign in" Foreground="Black" Click="MenuItemSignIn_Click"/>
                 <MenuItem x:Name="MenuItemRegister" Header="Register" Foreground="Black" Click="MenuItemRegister_Click"/>
                 <MenuItem x:Name="MenuItemProfile" Header="Profile" Foreground="Black" Click="MenuItemProfile_Click"/>
                 <MenuItem x:Name="MenuItemAdmin" Header="Admin" Foreground="Black" Click="MenuItemAdmin_Click" />
                 <MenuItem x:Name="MenuItemUpdateUser" Header="Update User" Foreground="Black" Click="MenuItemUpdateUser_Click" />
             </MenuItem>
-            <MenuItem Header="Calendar" x:Name="MenuItemCalendar" Foreground="White" Click="MenuItemCalendar_Click" Visibility="Hidden"/>
-            <MenuItem Header="Details" x:Name="Details" Foreground="White" Click="Details_Click" Visibility="Hidden">
+            <MenuItem Header="Calendar" x:Name="MenuItemCalendar" Foreground="White" Click="MenuItemCalendar_Click" Visibility="Visible"/>
+            <MenuItem Header="Details" x:Name="Details" Foreground="White" Click="Details_Click" Visibility="Visible">
                 <MenuItem Header="Workout" x:Name="MenuItemWorkout" Foreground="Black" Click="MenuItemWorkout_Click"/>
                 <MenuItem Header="Nutrition" x:Name="MenuItemNutrition" Foreground="Black" Click="MenuItemNutrition_Click"/>
             </MenuItem>
-            <MenuItem x:Name="menuLogOut" Header="Logout" Foreground="White" Click="menuLogOut_Click" Visibility="Hidden" />
+            <MenuItem x:Name="menuLogOut" Header="Logout" Foreground="White" Click="menuLogOut_Click" Visibility="Visible" />
         </Menu>
         <UserControl Margin="70,50,70,50"
                      Background="#009999">
