--- a/Spotter_group/UpdateUser.xaml
+++ b/Spotter_group/UpdateUser.xaml
@@ -156,7 +156,7 @@
 
                     <!-- Column 1 Labels -->
                     <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
-                        <Label Foreground="White" FontSize="20">Select Username</Label>
+                        <Label Foreground="White" FontSize="20">Username</Label>
                     </StackPanel>
                     <StackPanel Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
                         <Label Foreground="White" FontSize="20">First name:</Label>
@@ -168,7 +168,7 @@
                         <Label Foreground="White" FontSize="20">Birth Date</Label>
                     </StackPanel>
                     <StackPanel Grid.Column="0" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
-                        <Label Foreground="White" FontSize="20">Workout</Label>
+                        <Label Foreground="White" FontSize="20">Workout Type</Label>
                     </StackPanel>
                     <StackPanel Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
                         <Label Foreground="White" FontSize="20">Admin:</Label>
@@ -176,7 +176,7 @@
 
                     <!-- Column 2 Controls -->
                     <StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
-                        <TextBox Name="txtBoxUsernameADD" Margin="5, 10, 5, 10" Height="25" 
+                        <TextBox Name="txtBoxUsernameADD" 
                       VerticalAlignment="Top" Foreground="Black" Width="200px"></TextBox>
                     </StackPanel>
                     <StackPanel Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
@@ -221,7 +221,7 @@
                     </StackPanel>
 
                     <StackPanel Grid.Column="2" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
-                        <Label Foreground="White" FontSize="20">Select Workout</Label>
+                        <Label Foreground="White" FontSize="20">Workout type (image):</Label>
                     </StackPanel>
                     
                     
